force-app/main/default/objects/Audit_Case__c/Audit_Case__c.object-meta.xml
<CustomObject>
    <label>Audit Case</label>
    <pluralLabel>Audit Cases</pluralLabel>
    <nameField>
        <label>Audit Case Number</label>
        <type>AutoNumber</type>
        <displayFormat>AC-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>A single loan under review -- the central hub that links evidence, findings, replay checks, events, and the final receipt.</description>
</CustomObject>