force-app/main/default/objects/Audit_Case__c/fields/Approval_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Approval_Timestamp__c</fullName>
    <description>Original loan approval timestamp. Used for historical policy version selection during policy replay.</description>
    <inlineHelpText>The date and time when the loan was originally approved. This determines which policy version applies during replay.</inlineHelpText>
    <label>Approval Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>