force-app/main/default/objects/Audit_Case__c/fields/Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Assigned_At__c</fullName>
    <description>Timestamp when the auditor was assigned to this case.</description>
    <inlineHelpText>When the auditor was assigned to this audit case.</inlineHelpText>
    <label>Assigned At</label>
    <type>DateTime</type>
</CustomField>