force-app/main/default/objects/Audit_Case__c/fields/Auditor__c.field-meta.xml
<CustomField>
    <fullName>Auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user assigned as auditor for this case.</description>
    <inlineHelpText>The auditor assigned to review this loan. Cannot be the same user as Original Approver.</inlineHelpText>
    <label>Auditor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Cases_As_Auditor</relationshipName>
    <type>Lookup</type>
</CustomField>