force-app/main/default/objects/Audit_Case__c/fields/Borrower_Name_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Name_Snapshot__c</fullName>
    <description>Point-in-time snapshot of the borrower name as of Sampled_At__c. Write-once evidence field (see ADR-001). Captured at sampling and immutable thereafter — must NOT be derived live.</description>
    <inlineHelpText>Borrower name captured at the moment this case was sampled. Immutable evidence.</inlineHelpText>
    <label>Borrower Name (Snapshot)</label>
    <length>121</length>
    <type>Text</type>
</CustomField>