force-app/main/default/objects/Audit_Case__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Text</type>
    <length>100</length>
    <description>Originating branch (for FR-2 filtering)</description>
</CustomField>