force-app/main/default/objects/Audit_Case__c/fields/Due_At__c.field-meta.xml
<CustomField>
    <fullName>Due_At__c</fullName>
    <label>Due At</label>
    <type>DateTime</type>
    <required>true</required>
    <description>SLA deadline</description>
</CustomField>