force-app/main/default/objects/Audit_Case__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <label>Loan</label>
    <type>Lookup</type>
    <referenceTo>Loan__c</referenceTo>
    <relationshipName>Audit_Cases</relationshipName>
    <relationshipLabel>Audit Cases</relationshipLabel>
    <required>true</required>
    <description>The loan under audit</description>
</CustomField>