force-app/main/default/objects/Audit_Case__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <label>Loan Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Snapshot of loan amount (for queue display FR-1)</description>
</CustomField>