force-app/main/default/objects/Audit_Case__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <description>The approved loan under audit. Stored as Text(18) reference ID until Loan_Application__c object is deployed.</description>
    <inlineHelpText>The 18-character Salesforce ID of the approved loan application being audited.</inlineHelpText>
    <label>Loan Application</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>