force-app/main/default/objects/Audit_Case__c/fields/Original_Approver__c.field-meta.xml
<CustomField>
    <fullName>Original_Approver__c</fullName>
    <label>Original Approver</label>
    <type>Text</type>
    <length>255</length>
    <description>Loan officer who originally approved</description>
</CustomField>