force-app/main/default/objects/Audit_Case__c/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <label>Policy Version</label>
    <type>Lookup</type>
    <referenceTo>Policy_Version__c</referenceTo>
    <relationshipName>Audit_Cases</relationshipName>
    <relationshipLabel>Audit Cases</relationshipLabel>
    <description>Governing policy version at approval time</description>
</CustomField>