force-app/main/default/objects/Audit_Case__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <description>Loan product type (for FR-2 filtering)</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Conventional</fullName><default>false</default><label>Conventional</label></value>
            <value><fullName>FHA</fullName><default>false</default><label>FHA</label></value>
            <value><fullName>VA</fullName><default>false</default><label>VA</label></value>
            <value><fullName>USDA</fullName><default>false</default><label>USDA</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>