force-app/main/default/objects/Audit_Case__c/fields/Risk_Tier__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tier__c</fullName>
    <label>Risk Tier</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Risk classification</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Critical</fullName><default>false</default><label>Critical</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>