force-app/main/default/objects/Audit_Case__c/fields/Sampled_At__c.field-meta.xml
<CustomField>
    <fullName>Sampled_At__c</fullName>
    <label>Sampled At</label>
    <type>DateTime</type>
    <description>When the loan was sampled</description>
</CustomField>