force-app/main/default/objects/Audit_Case__c/fields/Sampling_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Reason__c</fullName>
    <label>Sampling Reason</label>
    <type>Text</type>
    <length>255</length>
    <description>Why this loan was selected for audit</description>
</CustomField>