force-app/main/default/objects/Audit_Case__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Free-text description of the audit scope.</description>
    <inlineHelpText>Describe what aspects of the loan approval are being audited.</inlineHelpText>
    <label>Scope</label>
    <type>TextArea</type>
</CustomField>