force-app/main/default/objects/Audit_Case__c/fields/Signed_Off_At__c.field-meta.xml
<CustomField>
    <fullName>Signed_Off_At__c</fullName>
    <label>Signed Off At</label>
    <type>DateTime</type>
    <description>When manager signed off</description>
</CustomField>