force-app/main/default/objects/Audit_Case__c/fields/Signed_Off_By__c.field-meta.xml
<CustomField>
    <fullName>Signed_Off_By__c</fullName>
    <label>Signed Off By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Signed_Off_Cases</relationshipName>
    <relationshipLabel>Signed Off Cases</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager who signed off</description>
</CustomField>