force-app/main/default/objects/Audit_Case__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current lifecycle stage of the audit case.</description>
    <inlineHelpText>The current stage in the audit lifecycle.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In_Review</fullName>
                <label>In Review</label>
            </value>
            <value>
                <fullName>Evidence_Needed</fullName>
                <label>Evidence Needed</label>
            </value>
            <value>
                <fullName>Ready_For_Signoff</fullName>
                <label>Ready For Signoff</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>