force-app/main/default/objects/Audit_Case__c/validationRules/Prevent_Self_Audit.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Self_Audit</fullName>
    <active>true</active>
    <description>Prevents an auditor from being assigned to audit a loan they originally approved. Only fires when both Auditor and Original Approver fields are populated.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Auditor__c)),
    NOT(ISBLANK(Original_Approver__c)),
    Auditor__c = Original_Approver__c
)</errorConditionFormula>
    <errorDisplayField>Auditor__c</errorDisplayField>
    <errorMessage>An auditor cannot audit a loan they originally approved. Please assign a different auditor.</errorMessage>
</ValidationRule>